# microsoft-nvidia-multi-agent

./: .acrignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_demo.py
deploy/: aca_deploy.sh  demo-run-on-all-docs.sh  foundry_deploy.sh  foundry_test-end-to-end.sh
docs/: demo_script.md  deploying_models_foundry.md  deploying_to_aca.md  troubleshooting.md
javaorchestrator/: .dockerignore  Dockerfile  README.md  pom.xml
javaorchestrator/src/main/java/com/microsoft/nvidia/orchestrator/: OrchestratorApplication.java
javaorchestrator/src/main/java/com/microsoft/nvidia/orchestrator/agent/: AgentConfiguration.java  InvoiceParsingAgent.java  InvoiceParsingTools.java
javaorchestrator/src/main/java/com/microsoft/nvidia/orchestrator/audit/: AuditLogger.java
javaorchestrator/src/main/java/com/microsoft/nvidia/orchestrator/client/: ParserClient.java
javaorchestrator/src/main/resources/: application-demo.yml
javaorchestrator/src/test/java/com/microsoft/nvidia/orchestrator/: OrchestratorApplicationTests.java
orchestrator/: agent.py  audit.py  config.py  telemetry.py
parser_service/: __init__.py  anomaly.py  audit.py  config.py  main.py  models.py  nim_client.py  normalizer.py  telemetry.py
prompts/: microsoft-nvidia-multi-agent prompt v1.md  microsoft-nvidia-multi-agent prompt v2 with safe mode.md  microsoft-nvidia-multi-agent prompt v3.md  microsoft-nvidia-multi-agent-java prompt v4.md  prompt log v3.md
sample_data/: generate_sample_invoice_pdf.py
(+14 files in other folders)
